Every user has a profile image(update/create) and a test works fine. url_photo: user/:id/picture

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,7 +22,7 @@
 
 en:
   Store: 'Store'
-  MyCart: 'My Cart'   
+  Edit: 'Edit Profile'   
   LogOut: 'Log out'
   LogIn:  'Log in'
   Orders:  'Orders'
